# sway-test-rs

./: README.md
template/: Cargo.toml
template/tests/: harness.rs
